# OSVR-RenderManager

./: .clang-format  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  RenderManagerBackends.h.in  format-project.sh  osvr_server_config.RenderManager.sample.json
apps/: CMakeLists.txt  RenderManagerOpenGLChessboard.cpp
cmake/: FindOpenGLES.cmake  FindOpenGLES2.cmake  Findliquidvr.cmake  Findnvapi.cmake  Version.cmake  osvrRenderManagerConfig.cmake  osvrRenderManagerConfigBuildTreeHints.cmake.in  osvrStashMapConfig.cmake
doc/: OverrideD3D11Base.md  renderManagerConfig.md  renderingOptimization.md
examples/: AdjustableRenderingDelayD3D.cpp  AdjustableRenderingDelayOpenGL.cpp  CMakeLists.txt  D3DCube.h  D3DSimpleShader.h  LatencyTestD3DExample.cpp  RenderManagerD3DATWDoubleBufferExample.cpp  RenderManagerD3DCAPIExample.cpp  RenderManagerD3DExample3D.cpp  RenderManagerD3DHeadSpaceExample.cpp  RenderManagerD3DPresentExample3D.cpp  RenderManagerD3DPresentMakeDeviceExample3D.cpp  RenderManagerD3DPresentSideBySideExample.cpp  RenderManagerD3DTest2D.cpp  RenderManagerOpenGLCAPIExample.cpp  RenderManagerOpenGLCAPISharedContextExample.cpp  RenderManagerOpenGLCoreExample.cpp  RenderManagerOpenGLES2Example.cpp  RenderManagerOpenGLExample.cpp  RenderManagerOpenGLHeadSpaceExample.cpp  RenderManagerOpenGLHighPolyTest.cpp  RenderManagerOpenGLPresentExample.cpp  RenderManagerOpenGLPresentSideBySideExample.cpp  RenderManagerOpenGLQt5Example.cpp  RenderManagerOpenGLSharedContextExample.cpp  RenderManagerOpenGLSharedContextPresentExample.cpp  RenderManagerOpenGLSpeedTest.cpp  RestartD3D.cpp  SolidColor.cpp  SpinCubeD3D.cpp  SpinCubeOpenGL.cpp  VertexShader3D.hlsl  font.c  font.h  pixelshader.h  pixelshader.hlsl  pixelshader3d.h  pixelshader3d.hlsl  vertexshader.h  vertexshader.hlsl  (+1 more)
installer/: CMakeLists.txt  README.txt  README_build.txt  directmode_HDK1.2.json  directmode_HDK1.2_landscape.json  directmode_HDK1.3.json  directmode_HDK1.3_ATW.json  directmode_HDK1.3_built_in.json  directmode_HDK1.3_mesh_client.json  directmode_HDK1.3_mesh_server.json  directmode_HDK2.0.json  directmode_HDK2.0_ATW.json  directmode_HDK2.0_built_in.json  directmode_Vuzix.json  directmode_dSight.json  distortion_nondirect_HDK1.2.json  nondirectmode_HDK1.2.json  nondirectmode_HDK1.3.json  nondirectmode_HDK2.0.json  nondirectmode_dSight.json  nondirectmode_dual_window.json  nondirectmode_window.json  nondirectmode_window_angledistort.json  nondirectmode_window_angletest.json  osvrRenderManager.aip
installer/DK2/: Oculus.json  Oculus_ATW.json  Oculus_ATW_sleep.json  vrpn_Oculus.cfg
installer/cmake/: FindosvrRenderManager.cmake
osvr/RenderKit/: CleanPNPIDString.h  ComputeATW.h  ComputeDistortionMesh.cpp  ComputeDistortionMesh.h  DeltaQuatDeadReckoning.h  DirectModeToolSkeleton.h  DirectModeVendors.h  DistortionCorrectTextureCoordinate.h  DistortionParameters.cpp  DistortionParameters.h  GraphicsLibraryD3D11.h  GraphicsLibraryOpenGL.h  PoseStateCaching.h  RenderKitGraphicsTransforms.cpp  RenderKitGraphicsTransforms.h  RenderKitGraphicsTransformsC.cpp  RenderKitGraphicsTransformsC.h  RenderKitGraphicsTransformsCommonCode.cpp  RenderManager.h  RenderManagerBase.cpp  RenderManagerC.cpp  RenderManagerC.h  RenderManagerD3D.cpp  RenderManagerD3D.h  RenderManagerD3D11ATW.h  RenderManagerD3D11C.cpp  RenderManagerD3D11C.h  RenderManagerD3DBase.cpp  RenderManagerD3DBase.h  RenderManagerD3DOpenGL.cpp  RenderManagerD3DOpenGL.h  RenderManagerImpl.h  RenderManagerOpenGL.cpp  RenderManagerOpenGL.h  RenderManagerOpenGLATW.h  RenderManagerOpenGLC.cpp  RenderManagerOpenGLC.h  RenderManagerOpenGLCustom.cpp  RenderManagerOpenGLCustom.h  RenderManagerOpenGLES20.cpp  (+14 more)
tests/: CMakeLists.txt
tests/header_dependencies/: CMakeLists.txt
